--- a/src/main/java/com/chivenh/ui/CommitPanel.form
+++ b/src/main/java/com/chivenh/ui/CommitPanel.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="10" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1127" height="520"/>
+      <xy x="20" y="20" width="1410" height="583"/>
     </constraints>
     <properties/>
     <border type="none">
@@ -13,39 +13,41 @@
       <component id="8bb2e" class="javax.swing.JLabel">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="4" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="52" height="17"/>
+            <preferred-size width="67" height="17"/>
           </grid>
         </constraints>
         <properties>
           <horizontalAlignment value="4"/>
           <labelFor value="424ce"/>
-          <text value="*类型"/>
-          <toolTipText value="*声明的字段为必填项"/>
+          <text resource-bundle="messages/git-msg" key="commitPanel.msgChangeType.label"/>
+          <toolTipText resource-bundle="messages/git-msg" key="commitPanel.required.tooltip"/>
         </properties>
       </component>
       <component id="b0ac4" class="javax.swing.JLabel">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="52" height="17"/>
+            <preferred-size width="67" height="17"/>
           </grid>
         </constraints>
         <properties>
           <horizontalAlignment value="4"/>
-          <text value="*影响范围"/>
-          <toolTipText value="*声明的字段为必填项"/>
+          <labelFor value="a244b"/>
+          <text resource-bundle="messages/git-msg" key="commitPanel.msgChangeScope.label"/>
+          <toolTipText resource-bundle="messages/git-msg" key="commitPanel.required.tooltip"/>
         </properties>
       </component>
       <component id="19a59" class="javax.swing.JLabel">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="52" height="17"/>
+            <preferred-size width="67" height="17"/>
           </grid>
         </constraints>
         <properties>
           <horizontalAlignment value="4"/>
           <horizontalTextPosition value="2"/>
-          <text value="*标题"/>
-          <toolTipText value="*声明的字段为必填项"/>
+          <labelFor value="92216"/>
+          <text resource-bundle="messages/git-msg" key="commitPanel.msgShortDescription.label"/>
+          <toolTipText resource-bundle="messages/git-msg" key="commitPanel.required.tooltip"/>
         </properties>
       </component>
       <component id="92216" class="javax.swing.JTextField" binding="msgShortDescription">
@@ -56,30 +58,30 @@
         </constraints>
         <properties>
           <name value="标题"/>
-          <toolTipText value="*声明的字段为必填项"/>
+          <toolTipText resource-bundle="messages/git-msg" key="commitPanel.required.tooltip"/>
         </properties>
       </component>
       <component id="a5d3c" class="javax.swing.JLabel">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="52" height="17"/>
+            <preferred-size width="67" height="17"/>
           </grid>
         </constraints>
         <properties>
           <horizontalAlignment value="4"/>
-          <text value="详述"/>
+          <text resource-bundle="messages/git-msg" key="commitPanel.msgLongDescription.label"/>
         </properties>
       </component>
       <component id="83b17" class="javax.swing.JLabel">
         <constraints>
           <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="52" height="17"/>
+            <preferred-size width="67" height="17"/>
           </grid>
         </constraints>
         <properties>
           <horizontalAlignment value="4"/>
           <horizontalTextPosition value="11"/>
-          <text value="完成的"/>
+          <text resource-bundle="messages/git-msg" key="commitPanel.msgClosedIssues.label1"/>
         </properties>
       </component>
       <component id="73448" class="javax.swing.JTextField" binding="msgClosedIssues">
@@ -98,40 +100,41 @@
         </constraints>
         <properties>
           <name value="影响范围"/>
+          <toolTipText resource-bundle="messages/git-msg" key="commitPanel.required.tooltip"/>
         </properties>
       </component>
       <component id="c313a" class="javax.swing.JLabel">
         <constraints>
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="32" height="17"/>
+            <preferred-size width="67" height="17"/>
           </grid>
         </constraints>
         <properties>
           <horizontalAlignment value="4"/>
-          <text value="不兼容的"/>
+          <text resource-bundle="messages/git-msg" key="commitPanel.msgBreakingChanges.label1"/>
         </properties>
       </component>
       <component id="d8c63" class="javax.swing.JLabel">
         <constraints>
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="32" height="17"/>
+            <preferred-size width="67" height="17"/>
           </grid>
         </constraints>
         <properties>
           <horizontalAlignment value="4"/>
-          <text value="更改内容"/>
+          <text resource-bundle="messages/git-msg" key="commitPanel.msgBreakingChanges.label2"/>
         </properties>
       </component>
       <component id="b2566" class="javax.swing.JLabel">
         <constraints>
           <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="52" height="17"/>
+            <preferred-size width="67" height="17"/>
           </grid>
         </constraints>
         <properties>
           <horizontalAlignment value="4"/>
           <horizontalTextPosition value="11"/>
-          <text value="工单列表"/>
+          <text resource-bundle="messages/git-msg" key="commitPanel.msgClosedIssues.label2"/>
         </properties>
       </component>
       <grid id="5a84d" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -154,7 +157,7 @@
             <properties>
               <lineWrap value="true"/>
               <margin top="2" left="6" bottom="2" right="6"/>
-              <text value="&lt;不兼容概述&gt;"/>
+              <text resource-bundle="messages/git-msg" key="commitPanel.msgBreakingChanges.defaultText"/>
             </properties>
           </component>
         </children>
@@ -187,12 +190,12 @@
       <component id="2b862" class="javax.swing.JLabel">
         <constraints>
           <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="6" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="32" height="17"/>
+            <preferred-size width="67" height="17"/>
           </grid>
         </constraints>
         <properties>
           <horizontalAlignment value="4"/>
-          <text value="弃用的"/>
+          <text resource-bundle="messages/git-msg" key="commitPanel.msgDeprecated.label1"/>
         </properties>
       </component>
       <grid id="e4f78" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -215,7 +218,7 @@
             <properties>
               <lineWrap value="true"/>
               <margin top="2" left="6" bottom="2" right="6"/>
-              <text value="&lt;弃用概述&gt;"/>
+              <text resource-bundle="messages/git-msg" key="commitPanel.msgDeprecated.defaultText"/>
             </properties>
           </component>
         </children>
@@ -223,12 +226,12 @@
       <component id="6cc48" class="javax.swing.JLabel">
         <constraints>
           <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="32" height="17"/>
+            <preferred-size width="67" height="17"/>
           </grid>
         </constraints>
         <properties>
           <horizontalAlignment value="4"/>
-          <text value="更改内容"/>
+          <text resource-bundle="messages/git-msg" key="commitPanel.msgDeprecated.label2"/>
         </properties>
       </component>
       <component id="424ce" class="javax.swing.JComboBox" binding="msgChangeType">
