--- a/src/main/java/com/fulinlin/ui/commit/CommitPanel.form
+++ b/src/main/java/com/fulinlin/ui/commit/CommitPanel.form
@@ -6,6 +6,7 @@
       <xy x="20" y="20" width="982" height="629"/>
     </constraints>
     <properties>
+      <enabled value="false"/>
       <minimumSize width="900" height="350"/>
       <preferredSize width="900" height="350"/>
     </properties>
@@ -16,7 +17,7 @@
           <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="8bb2e" class="javax.swing.JLabel" binding="typeDescriptionLabel" custom-create="true">
+      <component id="8bb2e" class="javax.swing.JLabel" binding="typeDescriptionLabel">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
