--- a/src/main/java/com/fulinlin/ui/commit/CommitPanel.form
+++ b/src/main/java/com/fulinlin/ui/commit/CommitPanel.form
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.fulinlin.ui.commit.CommitPanel">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="6" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="7" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="982" height="567"/>
+      <xy x="20" y="20" width="805" height="486"/>
     </constraints>
     <properties>
       <enabled value="false"/>
-      <minimumSize width="600" height="350"/>
-      <preferredSize width="650" height="350"/>
+      <minimumSize width="700" height="300"/>
+      <preferredSize width="750" height="400"/>
+      <requestFocusEnabled value="false"/>
     </properties>
     <border type="none"/>
     <children>
@@ -39,7 +40,7 @@
       </component>
       <component id="92216" class="javax.swing.JTextField" binding="shortDescription">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -53,17 +54,6 @@
           <text value="Long description"/>
         </properties>
       </component>
-      <component id="32600" class="javax.swing.JTextArea" binding="longDescription">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="35"/>
-          </grid>
-        </constraints>
-        <properties>
-          <autoscrolls value="true"/>
-          <lineWrap value="true"/>
-        </properties>
-      </component>
       <component id="83b17" class="javax.swing.JLabel" binding="closedDescriptionLabel">
         <constraints>
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -74,46 +64,84 @@
       </component>
       <component id="424ce" class="javax.swing.JComboBox" binding="changeType">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <model/>
         </properties>
       </component>
-      <component id="73448" class="javax.swing.JTextField" binding="closedIssues">
-        <constraints>
-          <grid row="5" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="c313a" class="javax.swing.JLabel" binding="changeDescriptionLabel">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="115" height="21"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Breaking changes"/>
         </properties>
       </component>
-      <component id="15a33" class="javax.swing.JTextArea" binding="breakingChanges">
-        <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="20"/>
-          </grid>
-        </constraints>
-        <properties>
-          <lineWrap value="true"/>
-        </properties>
-      </component>
       <component id="a244b" class="javax.swing.JTextField" binding="changeScope">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
         <properties/>
       </component>
+      <scrollpane id="b8bc2">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <foreground color="-11644585"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="79197" class="javax.swing.JTextArea" binding="longDescription">
+            <constraints/>
+            <properties>
+              <autoscrolls value="true"/>
+              <lineWrap value="true"/>
+              <margin top="0" left="0" bottom="0" right="0"/>
+            </properties>
+          </component>
+        </children>
+      </scrollpane>
+      <component id="73448" class="javax.swing.JTextField" binding="closedIssues">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <scrollpane id="7f8d9">
+        <constraints>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <maximum-size width="-1" height="100"/>
+          </grid>
+        </constraints>
+        <properties>
+          <foreground color="-11644585"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="b7a8f" class="javax.swing.JTextArea" binding="breakingChanges">
+            <constraints/>
+            <properties/>
+          </component>
+        </children>
+      </scrollpane>
+      <vspacer id="40cb5">
+        <constraints>
+          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
+      <vspacer id="535f2">
+        <constraints>
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
     </children>
   </grid>
 </form>
