--- a/src/main/java/com/fulinlin/ui/commit/CommitPanel.form
+++ b/src/main/java/com/fulinlin/ui/commit/CommitPanel.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.fulinlin.ui.commit.CommitPanel">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="7" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="805" height="486"/>
@@ -88,7 +88,7 @@
         </constraints>
         <properties/>
       </component>
-      <scrollpane id="b8bc2">
+      <scrollpane id="b8bc2" binding="longDescriptionScrollPane">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -115,7 +115,7 @@
         </constraints>
         <properties/>
       </component>
-      <scrollpane id="7f8d9">
+      <scrollpane id="7f8d9" binding="breakingChangesScrollPane">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <maximum-size width="-1" height="100"/>
@@ -132,16 +132,6 @@
           </component>
         </children>
       </scrollpane>
-      <vspacer id="40cb5">
-        <constraints>
-          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
-      <vspacer id="535f2">
-        <constraints>
-          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
     </children>
   </grid>
 </form>
